cmake_minimum_required(VERSION 3.17)
project(DemoCpp)

set(CMAKE_CXX_STANDARD 14)

#add_executable(DemoCpp main.cpp
#        Super.cpp
#        A.cpp
#        B.cpp
#        A.h
#        B.h
#        Person.cpp
#        C.cpp
#        Friend.cpp
#        D.cpp
#        Parent.cpp
#        VisualParent.cpp
#        VisualParent2.cpp
#        )
add_executable(DemoCpp main_file.cpp)
#add_executable(DemoCpp test/test4.cpp)